# alma

./: Cargo.toml  Dockerfile  README.md  azure-pipelines.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
presets/: aur_example.toml  copy_file.toml  installer.toml  kde.toml  user.toml  zfs.toml
presets/system_example/: 00-add_user.toml  01-set_root_passwd.toml  02-networking.toml  03-microcode.toml  04-video.toml  05-pulseaudio.toml  06-text_editors.toml  07-i3.toml  08-lightdm.toml  09-urxvt.toml  10-bluetooth.toml  11-zsh.toml  12-filesystems.toml  13-ssh.toml  14-git.toml  15-browsers.toml  16-mpv.toml  17-thunar.toml  18-mpd.toml  19-keepassxc.toml  20-archwiki.toml  21-timezone.toml  22-startup.toml  README.md
presets/system_example/i3_config/: i3_config  i3status_config
presets/system_example/startup_config/: xprofile
presets/system_example/text_editor_config/: gvimrc
presets/system_example/urxvt_config/: Xresources
src/: alma.rs  args.rs  aur.rs  block.rs  constants.rs  cryptsetup.rs  error.rs  initcpio.rs  main.rs  mountstack.rs  presets.rs  process.rs  tool.rs
src/storage/: crypt.rs  filesystem.rs  loop_device.rs  markers.rs  mod.rs  mount_stack.rs  partition.rs  removeable_devices.rs  storage_device.rs
src/tool/: chroot.rs  mod.rs  mount.rs  qemu.rs
