[package]
name = "alma"
version = "0.10.0"
authors = ["Roey Darwish Dror"]
edition = "2018"

[dependencies]
which = "3.1.0"
failure = "0.1.5"
log = "0.4.6"
structopt = "0.3.11"
tempfile = "3.0.5"
serde = { version = "1.0.92", features = ["derive"] }
toml = "0.5.1"
byte-unit = "3.0.1"
nix = "0.17.0"
env_logger = "0.6.2"
pretty_env_logger = "0.4.0"
dialoguer = "0.5.0"
console = "0.9.2"
