[package]
name = "alma"
version = "0.10.0"
authors = ["Roey Darwish Dror"]
edition = "2018"

[dependencies]
which = "4"
log = "0.4"
structopt = "0.3"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
byte-unit = "3"
nix = "0.17"
env_logger = "0.7"
pretty_env_logger = "0.4"
dialoguer = "0.6"
console = "0.11"
anyhow = "1"
